fixed navbar position and added padding to header to prevent clipping

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,12 +1,13 @@
 body>header {
-  height: 380px;
+  height: 520px;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-image: url('../images/3px-tile.png');
   background-color: #b50042;
-  justify-content: flex-start;    
+  justify-content: flex-start; 
+  padding-top: 120px;
 }
 
 .profilePic{
