--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,6 +9,9 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%; 
 }
 
 nav span{
